--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
     <!-- Banner Responsivo -->
     <div class="banner">
-        <h1>Chá de Cozinha<br>Adrielle e Ítalo</h1>
+        <h1>Chá de Cozinha<br>Adrielle e Ítalo!!!</h1>
     </div>
 
     <!-- Section de Agradecimento -->
